--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,8 @@ h6 {
 }
 
 p {
-  font-family: var(--paragraph-font);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 a {
@@ -113,7 +114,7 @@ button:hover {
 .bio-paragraph {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: left;
   margin-top: 20px;
 }
 
